What's new blog updated per Colin comments Fixed broken client links Added nats.deno, nats.ws Added Docker badge to NATS server on download Updated About text Updated Download text Added Starbucks logo Updated social links to open in new

--- a/data/addons.toml
+++ b/data/addons.toml
@@ -449,6 +449,15 @@ support = "Community"
 author = "Yuna Morgenstern"
 authorHome = "https://github.com/YunaBraska"
 
+[addons.synadia_ngs]
+name = "Synadia NGS"
+home = "https://synadia.com/ngs"
+description = "NGS is a global communications system built on NATS.io."
+support = "Community"
+[[addons.synadia_ngs.authors]]
+author = "Synadia"
+authorHome = "https://synadia.com"
+
 
 #[addons.xxx]
 #name = ""
