--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ tagline = "Cloud Native, Open Source, High-performance Messaging"
 favicon = "favicon.ico"
 font_awesome_version = "5.12.0"
 leftNav = false
-description = "NATS is a connective technology powering modern distributed systems for cloud native applications, IoT device messaging, and microservices architecture."
+description = "NATS is a connective technology powering modern distributed systems, unifying Cloud, On-Premise, Edge, and IoT."
 author = "The NATS Team"
 title = "NATS - Documentation"
 SectionPagesMenu = "main"
