add NSCI logo back and fix user logo layout

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -148,3 +148,7 @@ name = "TeamSystem"
 home = "https://teamsystem.com"
 logo = "teamsystem.png"
 
+[companies.nsci]
+name = "NSCI"
+home = "https://nsci.io"
+logo = "nsci.png"
