Restore PGP WKD functionality
The PGP key retrieval is a supported feature of the website.
Restore the invocation from the old gulpfile.js as of commit cceabd3aee0.

This is used by security-conscious people trying to retrieve the PGP keys for
securely contacting us.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ content/download/*.md
 !content/download/nats-server.md
 !content/download/nats-streaming-server.md
 
+# Generated PGP WKD files
+static/.well-known/openpgpkey/
+
 # Node
 node_modules
 npm-debug.log
