--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -86,9 +86,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 1.9.2
+  version_num: 1.11.0
   release_notes: |
-    Release v1.9.2 on March 30th, 2020.
+    Release v1.11.0 on May 3rd, 2021.
   github:
     - user: nats-io
       repo: nats.go
