--- a/data/language.toml
+++ b/data/language.toml
@@ -66,6 +66,14 @@ link = "https://github.com/nats-io"
 release_version = "0.10.0"
 release_date = "2019-11-18"
 [[language.c-sharp.orgs]]
+org = "nats-io"
+repo = "nats.net"
+supported = true
+author = "NATS Authors"
+link = "https://github.com/nats-io/nats.net"
+release_version = "0.12.0"
+release_date = "2021-02-26"
+[[language.c-sharp.orgs]]
 org = "danielwertheim"
 repo = "mynatsclient"
 supported = false
