--- a/data/companies.toml
+++ b/data/companies.toml
@@ -152,3 +152,13 @@ logo = "teamsystem.png"
 name = "NSCI"
 home = "https://nsci.io"
 logo = "nsci.png"
+
+[companies.ekeynow]
+name = "ekeynow"
+home = "https://ekeynow.com"
+logo = "ekeynow.png"
+
+[companies.portsip]
+name = "PortSIP"
+home = "https://portsip.com"
+logo = "portsip.png"
