--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,8 @@ font_awesome_version = "5.12.0"
 leftNav = false
 description = "NATS is a connective technology powering modern distributed systems, unifying Cloud, On-Premise, Edge, and IoT."
 author = "The NATS Team"
-title = "NATS - Documentation"
+title = "NATS.io"
+url = "https://nats.io/"
 SectionPagesMenu = "main"
 noCategoryLink = true
 githubBaseUrl = "https://github.com/nats-io/nats-site/edit/master/content"
