--- a/data/events.toml
+++ b/data/events.toml
@@ -1,26 +1,10 @@
 [[events]]
-venue = "KubeCon + CloudNativeCon Europe"
-when = "Friday, May 7, 2021 13:45 CEST"
-who = "Waldemar Quevedo"
-what = "NATS v2.2 | The JetStream Release"
+venue = "KubeCon + CloudNativeCon North America"
+when = "Thursday, October 14, 2021 2:30pm PT"
+who = "Colin Sullivan & Waldemar Quevedo"
+what = "Global Cloud and Edge Connectivity in Minutes with NATS.io"
 where = "Virtual"
-ref = "https://sched.co/iE8x"
-
-[[events]]
-venue = "KubeCon + CloudNativeCon Europe"
-when = "Tuesday, May 4, 2021 16:00 CEST"
-who = "The NATS Team"
-what = "Meet the Maintainers Office Hours"
-where = "Virtual"
-ref = "https://sched.co/ilDC"
-
-[[events]]
-venue = "KubeCon + CloudNativeCon Europe"
-when = "Thursday, May 6, 2021 14:15 CEST"
-who = "The NATS Team"
-what = "Meet the Maintainers Office Hours"
-where = "Virtual"
-ref = "https://sched.co/ilDs"
+ref = "https://sched.co/lV7x"
 
 
 # comment out to save
