--- a/data/events.toml
+++ b/data/events.toml
@@ -1,7 +1,7 @@
 [[events]]
 venue = "KubeCon + CloudNativeCon North America"
 when = "Thursday, October 14, 2021 2:30pm PT"
-who = "Colin Sullivan & Waldemar Quevedo"
+who = "Matthias Hanel and Jean-Noël Moyne"
 what = "Global Cloud and Edge Connectivity in Minutes with NATS.io"
 where = "Virtual"
 ref = "https://sched.co/lV7x"
