Fix language tag for swift 5.4

--- a/data/language.toml
+++ b/data/language.toml
@@ -449,7 +449,7 @@ link = "https://github.com/kakilangit"
 release_version = "3.0.0-alpha.1"
 release_date = "2016-08-28"
 
-[language.swift]
+[language.swift_5_4]
 name = "Swift"
 [[language.swift.orgs]]
 org = "aus-der-Technik"
