--- a/data/events.toml
+++ b/data/events.toml
@@ -1,5 +1,13 @@
 [[events]]
 venue = "KubeCon + CloudNativeCon North America"
+when = "Tuesday, October 12, 2021 9:00am PT"
+who = "The NATS Maintainers"
+what = "NATS Project Office Hours"
+where = "Virtual"
+ref = "https://sched.co/mtJK"
+
+[[events]]
+venue = "KubeCon + CloudNativeCon North America"
 when = "Thursday, October 14, 2021 2:30pm PT"
 who = "Matthias Hanel and Jean-Noël Moyne"
 what = "Global Cloud and Edge Connectivity in Minutes with NATS.io"
