add Litmus user logo

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -177,3 +177,8 @@ logo = "inspur.png"
 name = "Brobridge"
 home = "https://brobridge.com"
 logo = "brobridge.png"
+
+[companies.litmus]
+name = "Litmus"
+home = "https://litmus.io"
+logo = "litmus.png"
