Updated C client info
Signed-off-by: Ivan Kozlovic <ivan@synadia.com>

--- a/data/language.toml
+++ b/data/language.toml
@@ -48,17 +48,17 @@ suported = true
 jetstream_support = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
-release_version = '2.1.0'
-release_date = '2019-10-02'
+release_version = '3.1.1'
+release_date = '2021-09-03'
 [[language.c.orgs]]
 org = "nats-io"
-repo= "stan.c"
+repo= "nats.c"
 streaming_support = true
 suported = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
-release_version = '3.0.0'
-release_date = '2021-08-03'
+release_version = '3.1.1'
+release_date = '2021-09-03'
 
 [language.clojure]
 name = "Clojure"
