adding nats.py & nats-pure.rb to JS enabled client list

--- a/data/language.toml
+++ b/data/language.toml
@@ -330,6 +330,7 @@ name = "Pure Ruby"
 org = "nats-io"
 repo = "pure-ruby-nats"
 supported = true
+jetstream_support = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = "0.6.0"
@@ -351,6 +352,7 @@ name = "Python Asyncio"
 org = "nats-io"
 repo = "nats.py"
 supported = true
+jetstream_support = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = "0.9.2"
