--- a/data/events.toml
+++ b/data/events.toml
@@ -1,6 +1,6 @@
 [[events]]
 venue = "We Love Tech"
-when = "April 20, 2022, 18:30 CEST"
+when = "April 20, 2022, 18:30 BST"
 who = "Derek Collison, Synadia | Adelina Simion, Form3 | David Ramsbottom, Fleetcor"
 what = "We Love NATS"
 where = "Red Badger HQ & Virtual"
