--- a/data/companies.toml
+++ b/data/companies.toml
@@ -225,5 +225,5 @@ logo = "templum.png"
 
 [companies.voxo]
 name = "Voxo"
-home = "https://https://voxo.co/"
+home = "https://voxo.co/"
 logo = "voxo.svg"
