--- a/data/events.toml
+++ b/data/events.toml
@@ -1,10 +1,10 @@
 [[events]]
 venue = "KubeCon + CloudNativeCon NA"
-when = "October 24-28, 2022"
+when = "Thursday October 27, 2022 2:30pm - 3:05pm EDT"
 who = "Tomasz Pietrek & Jeremy Saenz & Todd Beets, Synadia"
 what = "Connect All the Things! Using NATS to Simplify Communication Everywhere"
 link = "https://sched.co/182OD"
-where = "Kubecon + CloudNativeCon NA 2022"
+where = "Detroit, Michigan"
 ref = "https://events.linuxfoundation.org/kubecon-cloudnativecon-north-america"
 
 # comment out to save
