--- a/data/companies.toml
+++ b/data/companies.toml
@@ -232,3 +232,8 @@ logo = "voxo.svg"
 name = "Pleggi"
 home = "https://pleggi.com"
 logo = "pleggi.png"
+
+[companies.mender]
+name = "Mender"
+home = "https://mender.io"
+logo = "mender.png"
