add deutsche börse logo

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -252,3 +252,9 @@ logo = "harperdb.png"
 name = "Lounge Up"
 home = "https://www.loungeup.com/"
 logo = "loungeup.jpg"
+
+[companies.deutsche-boerse]
+name = "Deutsche Böerse Group"
+home = "https://deutsche-boerse.com/dbg-en/"
+logo = "deutsche_borse.png"
+
