add wundergraph logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -263,3 +263,7 @@ name = "Aurora"
 home = "https://aurora.dev/"
 logo = "aurora-horiz.png"
 
+[companies.wundergraph]
+name = "WunderGraph"
+home = "https://wundergraph.com/"
+logo = "wundergraph.png"
