add tessell logo to end-users
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -267,3 +267,8 @@ logo = "aurora-horiz.png"
 name = "WunderGraph"
 home = "https://wundergraph.com/"
 logo = "wundergraph.png"
+
+[companies.tessell]
+name = "Tessell"
+home = "https://tessell.io/"
+logo = "tessell.png"
