--- a/data/servers.yaml
+++ b/data/servers.yaml
@@ -6,12 +6,11 @@
     name: Synadia
     link: https://synadia.com
   release:
-    version: '2.9.15'
-    date: '2023-03-02'
+    version: "2.9.16"
+    date: "2023-04-17"
   docker: nats
   prefix: nats-server
   official: true
-
 #- title: NATS Streaming Server
 #  org: nats-io
 #  repo: nats-streaming-server
