add Epicode logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -272,3 +272,8 @@ logo = "wundergraph.png"
 name = "Tessell"
 home = "https://tessell.io/"
 logo = "tessell.png"
+
+[companies.epicode]
+name = "Epicode"
+home = "https://epicode.in"
+logo = "epicode.png"
