fix KubeCon NA location

--- a/data/events.toml
+++ b/data/events.toml
@@ -22,7 +22,7 @@ when = "November 6-9, 2023"
 who = "Synadia/NATS Team"
 what = "TBA"
 link = "https://events.linuxfoundation.org/kubecon-cloudnativecon-north-america/"
-where = "Amsterdam, The Netherlands"
+where = "Chicago, Illinois"
 ref = "https://events.linuxfoundation.org/kubecon-cloudnativecon-north-america/"
 
 # comment out to save
