--- a/data/companies.toml
+++ b/data/companies.toml
@@ -277,3 +277,8 @@ logo = "tessell.png"
 name = "Epicode"
 home = "https://epicode.in"
 logo = "epicode.png"
+
+[companies.eyetowers]
+name = "Eyetowers"
+home = "https://www.eyetowers.cz/en/"
+logo = "eyetowers.svg"
