--- a/data/companies.toml
+++ b/data/companies.toml
@@ -287,3 +287,8 @@ logo = "eyetowers.svg"
 name = "RxDB"
 home = "https://rxdb.info/"
 logo = "rxdb.svg"
+
+[companies.intervals]
+name = "Intervals.icu"
+home = "https://intervals.icu/"
+logo = "intervals.png"
