add Benzinga logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -292,3 +292,8 @@ logo = "rxdb.svg"
 name = "Intervals.icu"
 home = "https://intervals.icu/"
 logo = "intervals.png"
+
+[companies.benzinga]
+name = "Benzinga"
+home = "https://benzinga.com/"
+logo = "benzinga.png"
