add awareness labs logo
Signed-off-by: ainsley <ginger@synadia.com>

--- a/data/companies.toml
+++ b/data/companies.toml
@@ -302,3 +302,8 @@ logo = "benzinga.png"
 name = "STY Holdings"
 home = "https://sty-holdings.com"
 logo = "sty-holdings.png"
+
+[companies.awarenesslabs]
+name = "Awareness Labs"
+home = "https://awareness-labs.github.io/"
+logo = "awarenesslabs.png"
