--- a/data/language.toml
+++ b/data/language.toml
@@ -28,6 +28,7 @@ name = "Ballerina"
 [[language.ballerina.orgs]]
 org = "ballerina-platform"
 repo = "module-ballerinax-nats"
+jetstream_support = true
 author = "Ballerina"
 link = "https://github.com/ballerina-platform"
 release_date = "2021-06-28"
