--- a/data/events.toml
+++ b/data/events.toml
@@ -1,10 +1,10 @@
 [[events]]
-#venue = "RethinkConn 2024"
-#when = "January 11, 2024 11:00 EST"
-#who = "Hosted by Byron Ruth, Synadia"
-#what = "Hear from users with diverse industry use cases, see some cool demos, and get a preview of what’s coming to NATS in 2024!"
-#where = "Virtual Event"
-#ref = "https://www.crowdcast.io/c/rethinkconn-2024"
+venue = "RethinkConn 2024"
+when = "January 11, 2024 11:00 EST"
+who = "Hosted by Byron Ruth, Synadia"
+what = "Hear from users with diverse industry use cases, see some cool demos, and get a preview of what’s coming to NATS in 2024!"
+where = "Virtual Event"
+ref = "https://www.crowdcast.io/c/rethinkconn-2024"
 
 
 [[icymi]]
